4.1/index.md
#### About

- [Introduction](/docs/{{version}}/introduction)
- [Demo](/docs/{{version}}/demo)
- [Installation](/docs/{{version}}/installation)
- [Release Notes](/docs/{{version}}/release-notes)
- [Upgrade Guide](/docs/{{version}}/upgrade-guide)
- [FAQ](/docs/{{version}}/faq)

#### Getting Started
- [Video Course](/docs/{{version}}/getting-started-videos)
- [Text Course](/docs/{{version}}/getting-started-basics)
    - [1. Basics](/docs/{{version}}/getting-started-basics)
    - [2. CRUD Operations](/docs/{{version}}/getting-started-crud-operations)
    - [3. Advanced Features](/docs/{{version}}/getting-started-advanced-features)
    - [4. Add-ons, License & Support](/docs/{{version}}/getting-started-license-and-support)

#### Admin UI

- [About](/docs/{{version}}/base-about)
- [Alerts](/docs/{{version}}/base-alerts)
- [Breadcrumbs](/docs/{{version}}/base-breadcrumbs)
- [Widgets](/docs/{{version}}/base-widgets)
- [How To](/docs/{{version}}/base-how-to)

#### CRUD Panels

- [Basics](/docs/{{version}}/crud-basics)
- [Crash Course](/docs/{{version}}/crud-tutorial)
- [Operations](/docs/{{version}}/crud-operations)
    + [List](/docs/{{version}}/crud-operation-list-entries)
        + [Columns](/docs/{{version}}/crud-columns)
        + [Buttons](/docs/{{version}}/crud-buttons)
        + [Filters](/docs/{{version}}/crud-filters)
    + [Create](/docs/{{version}}/crud-operation-create) & [Update](/docs/{{version}}/crud-operation-update)
        + [Fields](/docs/{{version}}/crud-fields)
        + [Save Actions](/docs/{{version}}/crud-save-actions)
    + [Delete](/docs/{{version}}/crud-operation-delete)
    + [Show](/docs/{{version}}/crud-operation-show)
        + [Columns](/docs/{{version}}/crud-columns)
- [Additional Operations](/docs/{{version}}/crud-operations)
    + [Clone](/docs/{{version}}/crud-operation-clone)
    + [Reorder](/docs/{{version}}/crud-operation-reorder)
    + [Revise](/docs/{{version}}/crud-operation-revisions)
    + [Fetch](/docs/{{version}}/crud-operation-fetch)
    + [InlineCreate](/docs/{{version}}/crud-operation-inline-create)
- [API](/docs/{{version}}/crud-cheat-sheet)
    + [Cheat Sheet](/docs/{{version}}/crud-cheat-sheet)
    + [Crud API](/docs/{{version}}/crud-api)
    + [Fluent API](/docs/{{version}}/crud-fluent-syntax)
- [How To](/docs/{{version}}/crud-how-to)


#### Add-ons

- [Official Add-ons](/docs/{{version}}/add-ons-official)
- [Community Add-ons](https://backpackforlaravel.com/addons)
- [How to Create an Add-on](/docs/{{version}}/add-ons-tutorial)
    + [Operation Add-on](/docs/{{version}}/add-ons-custom-operation)
