7.x/index.md
#### About

- [Introduction](/docs/{{version}}/introduction)
- [Demo](/docs/{{version}}/demo)
- [Installation](/docs/{{version}}/installation)
- [Features (Free vs Paid)](/docs/{{version}}/features-free-vs-paid)
- [Release Notes](/docs/{{version}}/release-notes)
- [Upgrade Guide](/docs/{{version}}/upgrade-guide)
- [FAQ](/docs/{{version}}/faq)

#### Getting Started
- [Video Course](/docs/{{version}}/getting-started-videos)
- [Text Course](/docs/{{version}}/getting-started-basics)
    - [1. Basics](/docs/{{version}}/getting-started-basics)
    - [2. CRUD Operations](/docs/{{version}}/getting-started-crud-operations)
    - [3. Advanced Features](/docs/{{version}}/getting-started-advanced-features)
    - [4. Add-ons, License & Support](/docs/{{version}}/getting-started-license-and-support)
- [Tutorials](/docs/{{version}}/tutorials)

#### Admin UI

- [About](/docs/{{version}}/base-about)
- [Alerts](/docs/{{version}}/base-alerts)
- [Breadcrumbs](/docs/{{version}}/base-breadcrumbs)
- [Themes](/docs/{{version}}/base-themes)
- [Widgets](/docs/{{version}}/base-widgets)
- [Components](/docs/{{version}}/base-components)
- [FAQs](/docs/{{version}}/base-how-to)

#### CRUD Panels

- [Basics](/docs/{{version}}/crud-basics)
- [Crash Course](/docs/{{version}}/crud-tutorial)
- [Operations](/docs/{{version}}/crud-operations)
    + [List](/docs/{{version}}/crud-operation-list-entries)
        + [Columns](/docs/{{version}}/crud-columns)
        + [Editable Columns](/docs/{{version}}/crud-editable-columns)
        + [Buttons](/docs/{{version}}/crud-buttons)
        + [Filters](/docs/{{version}}/crud-filters)
        + [Chips](/docs/{{version}}/crud-chips)
    + [Create](/docs/{{version}}/crud-operation-create) & [Update](/docs/{{version}}/crud-operation-update)
        + [Fields](/docs/{{version}}/crud-fields)
        + [Save Actions](/docs/{{version}}/crud-save-actions)
        + [Dataform Modal](/docs/{{version}}/crud-dataform-modal)
        + [Uploaders](/docs/{{version}}/crud-uploaders)
        + [CrudField JS Library](/docs/{{version}}/crud-fields-javascript-api)
    + [Delete](/docs/{{version}}/crud-operation-delete)
    + [Show](/docs/{{version}}/crud-operation-show)
        + [Columns](/docs/{{version}}/crud-columns)
        + [Chips](/docs/{{version}}/crud-chips)
- [Additional Operations](/docs/{{version}}/crud-operations)
    + [Clone](/docs/{{version}}/crud-operation-clone)
    + [Reorder](/docs/{{version}}/crud-operation-reorder)
    + [Revise](/docs/{{version}}/crud-operation-revisions)
    + [Fetch](/docs/{{version}}/crud-operation-fetch)
    + [InlineCreate](/docs/{{version}}/crud-operation-inline-create)
    + [Trash](/docs/{{version}}/crud-operation-trash)
    + [Calendar](/docs/{{version}}/crud-operation-calendar)
    + [Report](/docs/{{version}}/crud-operation-report)
    + [Download](/docs/{{version}}/crud-operation-download)
- [Official Add-ons](/docs/{{version}}/add-ons-official)
    + [Settings](/docs/{{version}}/add-on-settings)
    + [PermissionManager](/docs/{{version}}/add-on-permission-manager)
    + [TranslationManager](/docs/{{version}}/add-on-translation-manager)
    + [LangFileManager](/docs/{{version}}/add-on-langfile-manager)
    + [Language Switcher](/docs/{{version}}/add-on-language-switcher)
    + [BackupManager](/docs/{{version}}/add-on-backup-manager)
    + [Download Operation](/docs/{{version}}/crud-operation-download)
    + [LogManager](/docs/{{version}}/add-on-log-manager)
    + [PageManager](/docs/{{version}}/add-on-page-manager)
    + [FileManager](/docs/{{version}}/add-on-file-manager)
    + [MenuCRUD](/docs/{{version}}/add-on-menu-crud)
    + [NewsCRUD](/docs/{{version}}/add-on-news-crud)
    + [MediaLibrary Uploaders](/docs/{{version}}/add-on-medialibrary-uploaders)
    + [Activity Log](/docs/{{version}}/add-on-activity-log)
    + [PAN Panel](/docs/{{version}}/add-on-pan-panel)
- [API](/docs/{{version}}/crud-cheat-sheet)
    + [Cheat Sheet](/docs/{{version}}/crud-cheat-sheet)
    + [Crud API](/docs/{{version}}/crud-api)
    + [Fluent API](/docs/{{version}}/crud-fluent-syntax)
- [Generating Code](/docs/{{version}}/generating-code)
- [FAQ](/docs/{{version}}/crud-how-to)

#### Community Add-ons

- [Community Add-ons](https://backpackforlaravel.com/addons)
- [How to Create an Add-on](/docs/{{version}}/add-ons-tutorial-using-the-addon-skeleton)
- [How to Create a Theme](/docs/{{version}}/add-ons-tutorial-how-to-create-a-theme)
